<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.codepampa.testepessoal.Principal"
    >


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/lbl_name"
        android:padding="15dp" />

    <EditText
        android:id="@+id/txt_idade"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_name"
        android:hint="@string/lbl_idade"
        android:padding="15dp"
        android:numeric="integer"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="15dp"
        android:text="@string/lbl_sexo" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="100dp">

        <RadioButton
            android:id="@+id/rbtn_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_masculino"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbtn_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_feminino"

            />
    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:onClick="logar"
        android:text="@string/btn_name_enviar"
        android:enabled="true"/>

</LinearLayout>
