<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.codepampa.testepessoal.NonaPergunta">

    <TextView
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:padding="15dp"
        android:text="@string/lbl_nona_pergunta_perfil_f"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/rbtn_alegre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbtn_alegre"

            />

        <RadioButton
            android:id="@+id/rbtn_irritada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_irritada" />

        <RadioButton
            android:id="@+id/rbtn_sonolenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_sonolenta"

            />

        <RadioButton
            android:id="@+id/rbtn_triste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_triste"

            />

    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:onClick="irParaProximaPergunta9"
        android:text="@string/btn_name_enviar" />

</LinearLayout>
