<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.codepampa.testepessoal.OitavaPergunta"
    android:orientation="vertical">
    <TextView
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:padding="15dp"
        android:text="@string/lbl_oitava_pergunta_perfil_f"
        android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/rbtn_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_name_sim"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbtn_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_name_nao"

            />
    </RadioGroup>
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:onClick="irParaProximaPergunta8"
        android:text="@string/btn_name_enviar" />

</LinearLayout>
